# PhotonFinder

./: .gitignore  .gitmodules  LICENSE  Readme.md  astrofilemanager.spec  notes.md  photonfinder.spec  pyproject.toml  pytest.ini  pyuic.json  requirements.txt  requirements_dev.txt  setup.py  temp.py
.github/workflows/: release-windows.yml
astrofilemanager/: core.py  filesystem.py  fits_handlers.py  main.py  models.py
astrofilemanager/ui/: AboutDialog.py  BackgroundLoader.py  BinningDialog.py  CoordinatesDialog.py  CoordinatesDialog.ui  DateRangeDialog.py  ExportDialog.py  ExportDialog.ui  ExposureDialog.py  GainDialog.py  GainDialog.ui  LibraryRootDialog.py  LibraryRootDialog.ui  LibraryRootEditDialog.py  LibraryTreeModel.py  LogWindow.py  MainWindow.py  MainWindow.ui  SearchPanel.py  SearchPanel.ui  SettingsDialog.py  SettingsDialog.ui  TelescopeDialog.py  TemperatureDialog.py  loaders.py
data/catalog/: collinder.tsv  overrides.csv
data/catalog/vizier/: arp.csv  barnard.csv  cr.csv  lbn.csv  ldn.csv  mel.csv  pgc.csv  sharpless2.csv  vdb.csv
docs/: export-templates.md  index.md  installation.md  menu-items.md
photonfinder/: annotation_math.py  calibration.py  core.py  filesystem.py  fits_handlers.py  image_analysis.py  image_processing.py  main.py  mcp_server.py  models.py  platesolver.py
photonfinder/ui/: AboutDialog.py  AboutDialog.ui  BackgroundLoader.py  BinningDialog.py  BinningDialog.ui  CatalogReportWindow.py  CatalogReportWindow.ui  CompressFilesDialog.py  CompressFilesDialog.ui  CoordinatesDialog.py  CreateDataReportDialog.py  CreateDataReportDialog.ui  DataReportDialog.py  DataReportDialog.ui  DateRangeDialog.py  DateRangeDialog.ui  ExportDialog.py  ExportDialog.ui  ExposureDialog.py  ExposureDialog.ui  GainDialog.py  HeaderDialog.py  HeaderDialog.ui  ImageAnalysisDialog.py  ImageViewerWindow.py  LibraryRootDialog.py  LibraryRootEditDialog.py  LibraryRootEditDialog.ui  LibraryTreeModel.py  LogWindow.py  MainWindow.py  MainWindow.ui  MetadataReportDialog.py  MetadataReportDialog.ui  ObjectLookupDialog.py  ObjectLookupDialog.ui  PlateSolveDialog.py  PlateSolveDialog.ui  ProgressDialog.py  ProgressDialog.ui  (+21 more)
scripts/: backfill_coord_radius.py  build_catalog.py  fetch_arp.py  fetch_barnard.py  fetch_cr.py  fetch_lbn.py  fetch_ldn.py  fetch_mel.py  fetch_pgc.py  fetch_sharpless2.py  fetch_vdb.py  fix_xisf_wcs_flip.py
src/: main.py
src/models/: __init__.py  library_root.py
src/ui/: ApplicationContext.py  LibraryRootDialog.py  LibraryRootEditDialog.py  LibraryRootEditDialog.ui  MainWindow.py  MainWindow.ui  SearchPanel.py  searchpanel.ui
tests/: README.md  __init__.py  conftest.py  sample_headers.py  sample_models.py  sample_telescopius.json  sample_xisf_header.json  test_annotation_math.py  test_calibration_matcher.py  test_core.py  test_database.py  test_export_dialog.py  test_filesystem.py  test_fits_handlers.py  test_image_analysis.py  test_image_processing.py  test_mcp_server.py  test_model.py  test_models.py  test_platesolver.py  test_scanner.py  test_session.py  test_ui.py  utils.py
tests/data-small/: M106_2020-03-17T024357_60sec_LP__-15C_frame11.wcs.fits
tests/ui/: test_PlateSolveDialog.py  test_SearchPanel.py  test_TelescopiusCompareDialog.py  test_common.py
