[build-system]
requires = ["setuptools>=61.0", "wheel", "pyqt-distutils>=0.7.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PhotonFinder"
version = "1.0.0"
description = "Desktop application for managing astronomical files"
readme = "README.md"
authors = [
    { name = "benny", email = "benny.colyn@gmail.com" }
]
license = "MIT"

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6~=6.10.0",
    "pyinstaller==6.18.0",
    "pyinstaller-hooks-contrib==2026.0",
    "pyqt-distutils==0.7.3",
    "peewee~=3.19.0",
    "astropy~=7.2.0",
    "astropy-healpix~=1.1.2",
    "astroquery~=0.4.11",
    "photutils~=2.3.0",
    "xisf~=0.9.5",
    "zstd~=1.5.7.2",
    "setuptools<81",
    "fs~=2.4.16",
    "numpy~=2.4.2",
    "pillow~=12.1.0",
    "requests~=2.32.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0 ",
]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""

[tool.setuptools]
packages = ["photonfinder"]

[tool.setuptools.cmdclass]
build_ui = "pyqt_distutils.build_ui.build_ui"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
