[build-system]
requires = ["setuptools>=61.0", "wheel", "pyqt-distutils>=0.7.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PhotonFinder"
version = "1.0.0"
description = "Desktop application for managing astronomical files"
readme = "Readme.md"
authors = [
    { name = "Benny Colyn", email = "benny.colyn@gmail.com" }
]
license = "MIT"

requires-python = ">=3.13"
dependencies = [
    "PySide6~=6.11.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pyqt-distutils==0.7.3",
    "peewee~=4.0.0",
    "astropy~=7.2.0",
    "astropy-healpix~=1.1.3",
    "astroquery~=0.4.11",
    "photutils~=3.0.0",
    "xisf~=0.9.6",
    "zstd~=1.5.7.3",
    "setuptools<81",
    "fs~=2.4.16",
    "numpy~=2.4.2",
    "pillow~=12.2.0",
    "psutil~=7.2.0",
    "requests~=2.33.0",
    "opencv-python~=4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "tzdata",
]
build = [
    # Required during PyInstaller analysis: astropy/photutils submodules import
    # matplotlib at collection time, causing a startup failure if it's absent.
    # It is excluded from the bundle via photonfinder.spec; only needed at build time.
    "matplotlib",
]

[tool.uv]
package = false

[tool.setuptools]
packages = ["photonfinder"]

[tool.setuptools.cmdclass]
build_ui = "pyqt_distutils.build_ui.build_ui"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
